Saving/loading environment retains the selected plugin (feature request #2857938)